--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,1 +1,20 @@
 @import url('./__list/places__list.css');
+
+.places {
+  padding-bottom: 92px;
+}
+
+/*Use these checkpoints: 320, 768, 1024, 1280*/
+/*medium screen*/
+@media screen and (max-width: 768px) {
+  .places {
+    padding-bottom: 88px;
+  }
+}
+
+/*small screen*/
+@media screen and (max-width: 320px) {
+  .places {
+    padding-bottom: 64px;
+  }
+}
