--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,12 +1,23 @@
 .cover__subtitle {
-  margin: 0;
-  font-size: 18px;
-  line-height: 22px;
-  max-width: 320px;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-  color: #fff;
-  margin-top: 32px;
-  z-index: 2;
+ font-size: 18px;
+ line-height: 22px;
+ margin: 0;
+ max-width: 320px;
+ text-align: center;
+ position: relative;
+ z-index: 1;
+}
+
+@media screen and (min-width: 320px) {
+  .cover__subtitle {
+    font-size: 14px;
+    line-height: 16px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .cover__subtitle {
+    font-size: 18px;
+    line-height: 22px;
+  }
 }
