--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,40 +1,25 @@
 
 .cover__title {
-  margin: 0;
-  padding-top: 274px;
-  font-style: normal;
   font-weight: 900;
-  font-size: 32px;
-  line-height: 35px;
-  text-align: center;
+  font-size: 72px;
+  line-height: 76px;
+  margin: 0 0 32px;
+  position: relative;
+  z-index: 1;
 }
 
 @media screen and (min-width: 320px) {
   .cover__title {
-    padding-top: 64px;
-  }
-}
-@media screen and (min-width: 375px) {
-  .cover__title {
-    padding-top: 104px;
+    font-size: 32px;
+    line-height: 35px;
+    max-width: 288px;
   }
 }
 
 @media screen and (min-width: 768px) {
   .cover__title {
-    /*margin: 164px 0 127px 0;*/
-    padding-top: 165px;
     font-size: 72px;
-    line-height: 45px;
-  }
-}
-
-
-@media screen and (min-width: 1024px) {
-  .cover__title {
-    /*margin: 227px 0 171px 0;*/
-    padding-top: 240px;
-    font-size: 72px;
-    line-height: 78px;
+    line-height: 76px;
+    max-width: 656px;
   }
 }
