--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,51 +1,20 @@
 /*cover styles*/
-/*@import url('./__image/cover__image.css');*/
 @import url('./__title/cover__title.css');
 @import url('./__subtitle/cover__subtitle.css');
-@import url('./__text/cover__text.css');
+@import url('./__link/cover__link.css');
 
 .cover {
-  padding: 0;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  max-width: 1184px;
   margin: 0 auto;
-  overflow: hidden;
-  background-image: url(../../images/desert-highway.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  z-index: 1;
-  
+  max-width: 1184px;
+  max-height: 740px;
+  padding: 0;
 }
 
-/*Use these checkpoints: 320, 375, 768, 1024, 1280*/
+/*Use these checkpoints: 320, 768, 1024, 1280*/
 /*small screen*/
-@media screen and (min-width: 375px) {
+@media screen and (max-width: 320px) {
   .cover {
-      min-height: 272px;
-  }
-}
-
-/*medium screen*/
-@media screen and (min-width: 768px) {
-  .cover {
-      min-height: 500px;
-  }
-}
-
-/*big screen*/
-@media screen and (min-width: 1024px) {
-  .cover {
-      min-height: 562px;
-  }
-}
-
-/*large screen*/
-@media screen and (min-width: 1280px) {
-  .cover {
-      min-height: 594px;
+    height: 200px;
+    
   }
 }
