--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,30 +1,22 @@
 .footer__link {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 24px;
-    line-height: 41px;
-    color: #FFFFFF;
-    text-decoration: none;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 18px;
+  color: #FFFFFF;
+  text-decoration: none;
 }
 
 .footer__link:hover {
-    opacity: 40%;
-    transition: opacity 2s ease-in;
+  opacity: 40%;
+transition: opacity 1s ease-in;
 }
 
-/*Use these checkpoints: 320, 375, 768, 1024, 1280*/
-/*medium screen*/
-@media screen and (min-width: 768px) {
-    .footer__link {
-        font-size: 16px;
-        line-height: 27px;
-    }
-}
-
-/*big screen*/
-@media screen and (min-width: 1024px) {
-    .footer__link {
-        font-size: 24px;
-        line-height: 41px;
-    }
+/*Use these checkpoints: 320, 768, 1024, 1280*/
+/*small screen*/
+@media screen and (max-width: 320px) {
+  .footer__link {
+    font-size: 24px;
+    line-height: 24px;
+  }
 }
