--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,26 +1,26 @@
 @import url('./__logo/header__logo.css');
 
 .header {
-    max-width: 1184px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 16px 0 16px;
-    margin: 0 auto;
+  max-width: 1184px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 16px 0 16px;
+  margin: 0 auto;
 }
 
-/*Use these checkpoints: 320, 375, 768, 1024, 1280*/
+/*Use these checkpoints: 320, 768, 1024, 1280*/
 /*medium screen*/
 @media screen and (min-width: 768px) {
-    .header {
-        padding: 36px 24px 0 24px;
-    }
+  .header {
+    padding: 36px 24px 0 24px;
+  }
 }
 
 /*big screen*/
 @media screen and (min-width: 1024px) {
-    .header {
-        padding: 36px 48px 0 48px;
-    }
+  .header {
+    padding: 36px 48px 0 48px;
+  }
 }
 
