--- a/blocks/intro/__subtitle/intro__subtitle.css
+++ b/blocks/intro/__subtitle/intro__subtitle.css
@@ -1,17 +1,17 @@
 .intro__subtitle {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 24px;
-    line-height: 40px;
-    margin: 0 0 35px 0;
-    padding: 0;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 34px;
+  margin: 0 0 35px 0;
+  padding: 0;
 }
 
-/*Use these checkpoints: 320, 375, 768, 1024, 1280*/
-/*big screen*/
-@media screen and (min-width: 1024px) {
-    .intro__subtitle {
-        max-width: 682px;
-    }
+/*Use these checkpoints: 320, 768, 1024, 1280*/
+/*small screen*/
+@media screen and (min-width: 320) {
+  .intro__subtitle {
+    line-height: 30px;
+    max-width: 288px;
+  }
 }
-
