--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,25 +1,32 @@
 .intro__title {
-    font-style: normal;
-    font-weight: 900;
-    font-size: 32px;
-    line-height: 35px;
-    margin: 0 0 34px 0;
-    padding: 0;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 54px;
+  line-height: 58px;
 }
 
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
 /*medium screen*/
+@media screen and (min-width: 320px) {
+  .intro__title {
+    font-size: 32px;
+    line-height: 35px;
+    max-width: 288px;
+  }
+}
+
 @media screen and (min-width: 768px) {
-    .intro__title {
-        font-size: 54px;
-        line-height: 59px;
-        margin: 0 0 46px 0;
-    }
+  .intro__title {
+    font-size: 54px;
+    line-height: 59px;
+    margin: 0 0 46px 0;
+    max-width: 720px;
+  }
 }
 
 /*big screen*/
 @media screen and (min-width: 1024px) {
-    .intro__title {
-        max-width: 682px;
-    }
+  .intro__title {
+    max-width: 682px;
+  }
 }
