--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,28 +1,20 @@
 .lead__image {
-    width: 100%;
-    margin: 0 0 8px 0;
+  width: 100%;
+  margin: 0 0 8px 0;
+  align-self: center;
 }
 
-/*Use these checkpoints: 320, 375, 768, 1024, 1280*/
+/*Use these checkpoints: 320, 768, 1024, 1280*/
 /*medium screen*/
 @media screen and (min-width: 768px) {
-    .lead__image {
-        margin: 0 0 16px 0;
-    }
-}
-
-/*big screen*/
-@media screen and (min-width: 1024px) {
-    .lead__image {
-        width: calc(100% - 96px);
-        padding: 0 48px;
-        max-width: 984px;
+  .lead__image {
+    width: 100%;
     }
 }
 
 /*large screen*/
 @media screen and (min-width: 1280px) {
     .lead__image {
-        margin: 0 0 11px 0;
+        margin: 0 0 8px 0;
     }
 }
