--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -4,25 +4,21 @@
   font-weight: 900;
   line-height: 93px;
   text-align: center;
+  align-self: center;
   margin: 0 auto 8px;
   padding: 0;
   width: 928px;
 }
 
-/*smaller screen*/
-@media screen and (min-width: 320px){
-    .lead__title{
-        width: 288px;
-        font-size: 40px;
-        line-height: 44px;
-    }
-}
+/*Use these checkpoints: 320, 768, 1024, 1280*/
 /*small screen*/
-@media screen and (min-width: 375px) {
-	.lead__title {
-		width:343px;
-	}
-}	 
+@media screen and (min-width: 320px){
+  .lead__title{
+    width: 288px;
+    font-size: 40px;
+    line-height: 44px;
+  }
+}
 
 /*medium screen*/
 @media screen and (min-width: 768px) {
