--- a/blocks/nav/__item/nav__item.css
+++ b/blocks/nav/__item/nav__item.css
@@ -1,12 +1,12 @@
 .nav__item {
-    display: inline-block;
-    margin: 0 0 0 16px;
+  display: inline-block;
+  margin: 0 0 0 16px;
 }
 
-/*Use these checkpoints: 320, 375, 768, 1024, 1280*/
+/*Use these checkpoints: 320, 768, 1024, 1280*/
 /*medium screen*/
 @media screen and (min-width: 768px) {
-    .nav__item {
-        margin: 0 0 0 18px;
-    }
+  .nav__item {
+    margin: 0 0 0 18px;
+  }
 }
