--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,26 +1,26 @@
 .place__title {
-    font-style: normal;
-    font-weight: 900;
-    font-size: 32px;
-    line-height: 35px;
-    margin: 0 16px 32px 16px;
-    padding: 0;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 32px;
+  line-height: 35px;
+  margin: 0 16px 32px 16px;
+  padding: 0;
 }
 
-/*Use these checkpoints: 320, 375, 768, 1024, 1280*/
+/*Use these checkpoints: 320, 768, 1024, 1280*/
 /*medium screen*/
 @media screen and (min-width: 768px) {
-    .place__title {
-        font-size: 42px;
-        line-height: 46px;
-        margin: 0;
-    }
+  .place__title {
+    font-size: 42px;
+    line-height: 46px;
+    margin: auto 0;
+  }
 }
 
 /*big screen*/
 @media screen and (min-width: 1024px) {
-    .place__title {
-        font-size: 72px;
-        line-height: 65px;
-    }
+  .place__title {
+    font-size: 72px;
+    line-height: 65px;
+  }
 }
