--- a/blocks/place/__url-container/place__url-container.css
+++ b/blocks/place/__url-container/place__url-container.css
@@ -1,9 +1,10 @@
 .place__url-container {
-    display: none;
+  display: none;
+  margin-top: auto;
 }
 
 @media screen and (min-width: 768px) {
-    .place__url-container {
-        display: inline;
-    }
+  .place__url-container {
+    display: inline;
+  }
 }
