--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -7,32 +7,34 @@
 
 
 .place {
-    padding: 60px 0 0 0;
-    margin: 0 auto;
-    max-width: 984px;
+  padding: 60px 0 0 0;
+  margin: 0 auto;
+  max-width: 984px;
 }
 
-/*Use these checkpoints: 320, 375, 768, 1024, 1280*/
+/*Use these checkpoints: 320, 768, 1024, 1280*/
 /*medium screen*/
 @media screen and (min-width: 768px) {
-    .place {
-        padding: 90px 24px 0 24px;
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: repeat(2, auto);
-        grid-gap: 28px 40px;
-    }
+  .place {
+    padding: 90px 24px 0 24px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(2, auto);
+    grid-gap: 28px 40px;
+  }
 }
+
 /*big screen*/
 @media screen and (min-width: 1024px) {
-    .place {
-        padding: 90px 48px 0 48px;
-        grid-gap: 32px 40px;
-    }
+  .place {
+    padding: 90px 48px 0 48px;
+    grid-gap: 32px 40px;
+  }
 }
+
 /*large screen*/
 @media screen and (min-width: 1280px) {
-    .place {
-        grid-gap: 60px 40px;
-    }
+  .place {
+    grid-gap: 60px 40px;
+  }
 }
