--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,4 +1,6 @@
 .intro__title {
+  margin-bottom: 46px;
+  margin: 0;
   font-style: normal;
   font-weight: 900;
   font-size: 54px;
@@ -11,6 +13,7 @@
   .intro__title {
     font-size: 32px;
     line-height: 35px;
+    margin-bottom: 40px;
     max-width: 288px;
   }
 }
@@ -18,8 +21,8 @@
 @media screen and (min-width: 768px) {
   .intro__title {
     font-size: 54px;
-    line-height: 59px;
-    margin: 0 0 46px 0;
+    line-height: 58px;
+    margin-bottom: 46px;
     max-width: 720px;
   }
 }
