--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,5 +1,5 @@
 .cover__link {
-  min-height: 740px;
+  height: 100%;
   background-image: url(../../../images/desert-highway.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -10,7 +10,7 @@
   align-items: center;
   color: #ffffff;
   text-decoration: none;
-  position: relative;  
+  position: relative;
   min-width: 100%;
 }
 
@@ -33,7 +33,7 @@
 /*small screen*/
 @media screen and (min-width: 320px) {
   .cover__link {
-    min-height: 200px;
+    min-height: 100%;
   }
 }
 
@@ -45,7 +45,7 @@
 }
 
 /*big screen*/
-@media screen and (min-width: 1024px) {
+/*@media screen and (min-width: 1024px) {
   .cover__link {
     min-height: 640px;
   }
