--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,26 +1,39 @@
 @import url('./__logo/header__logo.css');
 
 .header {
-  max-width: 1184px;
+  max-width: 984px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 16px 0 16px;
   margin: 0 auto;
 }
 
 /*Use these checkpoints: 320, 768, 1024, 1280*/
+/*small screen*/
+@media screen and (min-width: 320px) {
+  .header {
+    padding: 20px 16px 50px;
+  }
+}
+
 /*medium screen*/
 @media screen and (min-width: 768px) {
   .header {
-    padding: 36px 24px 0 24px;
+    padding: 34px 24px 50px;
   }
 }
 
 /*big screen*/
 @media screen and (min-width: 1024px) {
   .header {
-    padding: 36px 48px 0 48px;
+    padding: 34px 48px 50px;
+  }
+}
+
+/*large screen*/
+@media screen and (min-width: 1280px) {
+  .header {
+    padding: 34px 148px 58px;
   }
 }
 
