--- a/blocks/intro/__subtitle/intro__subtitle.css
+++ b/blocks/intro/__subtitle/intro__subtitle.css
@@ -3,13 +3,14 @@
   font-weight: normal;
   font-size: 24px;
   line-height: 34px;
-  margin: 0 0 35px 0;
+  margin: 0 0 32px 0;
   padding: 0;
+  max-width: 690px;
 }
 
 /*Use these checkpoints: 320, 768, 1024, 1280*/
 /*small screen*/
-@media screen and (min-width: 320) {
+@media screen and (max-width: 320px) {
   .intro__subtitle {
     line-height: 30px;
     max-width: 288px;
