--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -2,23 +2,22 @@
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
-  line-height: 27px;
-  margin: 0 0 48px 0;
+  line-height: 26px;
+  margin: 0;
+  margin-bottom: 32px;
 }
 
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
 /*medium screen*/
 @media screen and (min-width: 768px) {
   .intro__text {
-    font-size: 14px;
-    line-height: 24px;
-    margin: 0 0 25px 0;
+    max-width: 720px;
   }
 }
 
 /*big screen*/
 @media screen and (min-width: 1024px) {
   .intro__text {
-    max-width: 682px;
+    max-width: 690px;
   }
 }
