--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -11,16 +11,23 @@
 }
 
 /*Use these checkpoints: 320, 768, 1024, 1280*/
+/*small screen*/
+@media screen and (min-width: 320px) {
+  .intro {
+    padding: 0 24px 88px 24px;
+  }
+}
+
 /*medium screen*/
 @media screen and (min-width: 768px) {
   .intro {
-    padding: 0 24px 93px 24px;
+    padding: 0 24px 88px 24px;
   }
 }
 
 /*big screen*/
-@media screen and (min-width: 1024px) {
+/*@media screen and (min-width: 1024px) {
   .intro {
-    padding: 0 48px 102px 48px;
+    padding: 0 48px 92px 48px;
   }
 }
