--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -4,7 +4,7 @@
 @import url('./__subtitle/lead__subtitle.css');
 
 .lead {
-  padding: 58px 0 92px 0;
+  padding-bottom: 92px;
   margin: 0 auto;
   max-width: 984px;
   min-width: 320px;
@@ -16,13 +16,14 @@
 /*big screen*/
 @media screen and (max-width: 1024px) {
   .lead {
-    padding-top: 50px;
+    max-width: 928px;
   }
 }
 
 /*medium screen*/
 @media screen and (max-width: 768px) {
   .lead {
+    width: 100%;
     padding-bottom: 88px;
   }
 }
