--- a/blocks/nav/__link/nav__link.css
+++ b/blocks/nav/__link/nav__link.css
@@ -1,8 +1,8 @@
 .nav__link {
   font-style: normal;
   font-weight: normal;
-  font-size: 18px;
-  line-height: 17px;
+  font-size: 24px;
+  line-height: 28px;
   text-decoration: none;
   color: #FFFFFF;
 }
@@ -13,10 +13,10 @@
 }
 
 /*Use these checkpoints: 320, 768, 1024, 1280*/
-/*medium screen*/
-@media screen and (min-width: 768px) {
+/*small screen*/
+@media screen and (max-width: 320px) {
   .nav__link {
-    font-size: 24px;
-    line-height: 23px;
+    font-size: 18px;
+    line-height: 24px;
   }
 }
