--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -14,6 +14,7 @@
   min-width: 100%;
 }
 
+/*adding transition here will make smooth effect when hovering and removing cursor from object*/
 .cover__link::after {
   content: "";
   width: 100%;
@@ -23,11 +24,12 @@
   left: 0;
   background-color: #2A2C2F;
   opacity: .3;
+  transition: opacity 1s ease;
 }
 
 .cover__link:hover::after {
   opacity: .8;
-  transition: opacity 1s ease;
+  
 }
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
 /*small screen*/
