--- a/blocks/place/__text/place__text.css
+++ b/blocks/place/__text/place__text.css
@@ -7,12 +7,7 @@
   padding: 0;
 }
 
-.place__text:last-child {
-  margin: 0 16px;
-}
-
-
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 768px) {
   .place__text {
     font-size: 16px;
     line-height: 26px;
